--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poiret+One|Raleway" rel="stylesheet">
-    <link href='img/Book_placeholder.png' rel='icon' sizes="8x8">
+    <link href='Book_placeholder.png' rel='icon' sizes="8x8">
     <title id='ttl' class="ttl"></title>
   </head>
   <body>
